# Real-Time-Edge-Detection

./: .gitignore  README.md  index.html  main.ts  package-lock.json  package.json  style.css
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
main/cpp/: CMakeLists.txt  native-lib.cpp
main/java/: example - Shortcut.lnk
main/java/com/example/myapplication/: MyGLRenderer.java  MyNativeLib.java
main/kotlin/com/example/myapplication/: MainActivity.kt  MyGLSurfaceView.kt
